<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">jassboard</string>
    <string name="set_team">Teamverwaltung</string>
    <string name="set_player">Spielerverwaltung</string>
    <string name="start_game">neues Spiel</string>
    <string name="add_player">neuer Spieler erstellen</string>
    <string name="add_team">neues Team erstellen</string>
    <string name="create_player">neuer Spieler erstellen</string>
    <string name="enterPlayerName">Bitte Spielernamen angeben</string>
    <string name="players_of_team">Spieler dieses Teams</string>
    <string name="enterTeamName">Bitte Teamnamen angeben</string>
    <string name="create_team">Team erstellen</string>
    <string name="selectplayer1">Erstes Teammitglied auswählen</string>
    <string name="selectplayer2">Zweites Teammitglied auswählen</string>
    <string name="deletepl">Spieler löschen</string>
    <string name="deletetm">Team löschen</string>
    <string name="deleteplayer">Möchten Sie den Spieler wirklich löschen?</string>
    <string name="deleteteam">Möchten Sie dieses Team wirklich löschen?</string>
    <string name="delete">löschen</string>
    <string name="deleted">gelöscht</string>
    <string name="cancel">Abbrechen</string>
    <string name="player">Spieler</string>
    <string name="team">Team</string>
    <string name="players">Spieler</string>
    <string name="teams">Teams</string>
    <string name="blankteamname">Leerer Teamname</string>
    <string name="blankplayername">Leerer Spielername</string>
    <string name="sameplayerselectedtwice">gleicher Spieler doppelt ausgewählt</string>
    <string name="created">erstellt</string>
    <string name="player1">Spieler 1</string>
    <string name="player2">Spieler 2</string>
    <string name="player3">Spieler 3</string>
    <string name="player4">Spieler 4</string>
    <string name="team1">Team 1</string>
    <string name="team2">Team 2</string>
    <string name="viewranks">Rangliste</string>
    <string name="rankswelcome">Bitte von den Ratiobuttons unten auswählen welche Rangliste angzeigt werden soll.
    </string>
    <string name="welcome">Willkomen in Jassboard</string>
    <string name="id">ID</string>
    <string name="gameswon">Spiele gewonnen</string>
    <string name="roundswon">Runden gewonnen</string>
    <string name="pointsmade">Punkte ergattert</string>
    <string name="off">von</string>
    <string name="playername">Spieler Name</string>
    <string name="teamname">Team Name</string>
    <string name="schieber">Schieber</string>
    <string name="coiffeur">Coiffeur</string>
    <string name="differenzler">Differenzler</string>
    <string name="playersusedtwice">Spieler doppelt verwendet. Eventuell Spieler in beiden Teams)</string>
    <string name="resultbetween">Resultat muss zwischen 0 unt 157 liegen.</string>
    <string name="calcenemy">Gegner wird berechnet</string>
    <string name="notcalcenemy">Gegner wird nicht berechnet.</string>
    <string name=""></string>
    <string-array name="game_modes">
        <item>Schieber</item>
        <item>Coiffeur</item>
        <item>Differenzler</item>
    </string-array>
</resources>