<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <TextView android:id="@+id/text"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/welcome"/>
    <Button android:id="@+id/button_start_game"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:text="@string/start_game"
            android:onClick="startGame" />
    <Button android:id="@+id/button_set_player"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:text="@string/set_player"
            android:onClick="setPlayer" />
    <Button android:id="@+id/button_set_team"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:text="@string/set_team"
            android:onClick="setTeam" />
    <Button android:id="@+id/button_view_statistics"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:text="@string/viewstatistics"
            android:onClick="viewStatistics" />
</LinearLayout>

