<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/viewstatistics"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/rankswelcome"/>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_teams"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/teams"
                     android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_players"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/players"
                     android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_gameswon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/gameswon"
                     android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_roundswon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/roundswon"
                     android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_pointsmade"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/pointsmade"
                     android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/rankinglayout"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:orientation="vertical">
        <ListView android:id="@+id/rankinglist"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>