<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <Spinner
            android:id="@+id/gamemodespinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:entries="@array/game_modes"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/gamemodeschieber"
                  android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:visibility="invisible">
        <TextView android:id="@+id/player1"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/player1"/>
        <TextView android:id="@+id/player2"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/player2"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/gamemodecoiffeur"
                  android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:visibility="invisible">
        <TextView android:id="@+id/player1"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/player1"/>
        <TextView android:id="@+id/player2"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/player2"/>
        <TextView android:id="@+id/player3"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/player3"/>
        <TextView android:id="@+id/player4"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/player4"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/gamemodedifferenzler"
                  android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:visibility="invisible">
        <TextView android:id="@+id/player1"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/player1"/>
        <TextView android:id="@+id/player2"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/player2"/>
        <TextView android:id="@+id/player3"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/player3"/>
        <TextView android:id="@+id/player4"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/player4"/>
    </LinearLayout>
</LinearLayout>